--- a/TypeCheckerGenerator/latex/TermSubstitution.tex
+++ b/TypeCheckerGenerator/latex/TermSubstitution.tex
@@ -23,12 +23,10 @@
 \AgdaModule{Thinning}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Thinnable}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{\textasciicircum{}sub}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{weaken}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{⟨sub}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{↑}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}!\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaFunction{⟨sub}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -39,8 +37,7 @@
 \AgdaModule{Data.Nat}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{zero}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaInductiveConstructor{suc}\AgdaSymbol{)}\<%
 \end{code}
 }
 
@@ -70,11 +67,15 @@
 \>[4]\AgdaGeneralizable{d}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Dir}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- substitution on terms}\<%
-\\
+\end{code}
+}
+
+Following our generic notion of substitution, we now specialise our
+our definiton to substitute computations. We supply the usual thinning
+and weakening mechanics that we rely on as well as defining the identity
+substitution.
+
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇒\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSpace{}%
@@ -96,11 +97,28 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨σ\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨σ\AgdaUnderscore{}}}%
+\>[6]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}%
+\>[6]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{id}%
+\>[6]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+\>[0]\<%
 \\
 \>[0]\AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟨σ}}\AgdaSpace{}%
@@ -113,32 +131,13 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}`}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\textasciicircum{}`}}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟨σ}}\AgdaSpace{}%
-\AgdaFunction{↑}\<%
+\AgdaFunction{weaken}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨σ\AgdaUnderscore{}}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{id}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\<%
-\\
 \>[0]\AgdaFunction{id}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -148,59 +147,21 @@
 \AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{id}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\})}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\textasciicircum{}}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{fromNum}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++sub\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaGeneralizable{δ'}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒}}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\<%
-\\
-\>[0]\AgdaInductiveConstructor{ε}%
-\>[9]\AgdaOperator{\AgdaFunction{++sub}}\AgdaSpace{}%
-\AgdaBound{σ'}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{σ'}\<%
-\\
-\>[0]\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{++sub}}\AgdaSpace{}%
-\AgdaBound{σ'}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{++sub}}\AgdaSpace{}%
-\AgdaBound{σ'}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- action of a substitution}\<%
-\\
+\AgdaInductiveConstructor{ze}\<%
+\end{code}
+}
+
+We also define the action of such a substitution on a term, proceeding
+structurally as one might expect except that we ensure we alter the
+substitution accordingly as we pass under binders, introducing an identity
+substitution for the newly bound variable.
+
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
@@ -215,8 +176,40 @@
 \AgdaGeneralizable{d}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaComment{-- ...}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[28]\AgdaBound{σ}%
+\>[31]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\textasciicircum{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}%
+\>[28]\AgdaBound{σ}%
+\>[31]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{lookup}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{compu}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{σ}\AgdaSpace{}%
+\AgdaBound{v}\<%
+\\
+\>[0]\AgdaComment{-- ...}\<%
+\end{code}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
@@ -243,21 +236,6 @@
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[28]\AgdaBound{σ}%
-\>[31]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\textasciicircum{}`}}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaInductiveConstructor{ze}\AgdaSymbol{))}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
 \>[28]\AgdaBound{σ}%
@@ -266,28 +244,6 @@
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}%
-\>[28]\AgdaBound{σ}%
-\>[31]\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧var}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{!}}\AgdaSpace{}%
-\AgdaBound{σ}\<%
-\\
-\>[0]\AgdaSymbol{...}%
-\>[30]\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}%
-\>[46]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{x}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
