Removed unnecessary code from Pattern and finished Opening

--- a/TypeCheckerGenerator/latex/Opening.tex
+++ b/TypeCheckerGenerator/latex/Opening.tex
@@ -2,6 +2,11 @@
 
 \hide{
 \begin{code}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{OPTIONS}\AgdaSpace{}%
+\AgdaPragma{--rewriting}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\\
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Opening}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -26,10 +31,18 @@
 }
 
 A useful operation later will be to open up scoped entities. We take this
-to mean lifting an entity scoped in $δ$ by some scope $γ$ so that no part
-of the entity refers to anything in $γ$, this is accomplished by assuming
-there the outer and inner scopes do not intersect and so the result will be
-some entity scoped in $γ + δ$.
+loosly to mean lifting an entity to include some scope $γ$ without capturing
+anything scoped in $γ$ or otherwise acting on this new extension of the
+scope. For example a variable scoped in $δ$ might be opened so that it is
+now valid in scope $γ + δ$ where it will remain a reference to the same
+information as before, opening it will not change its function
+
+For thinnings, this is accomplished by prepending the identity thinning
+length $γ$ to the original thinning so that for some $δ ⊑ δ'$ the resulting
+thinning is of type $(γ + δ) ⊑ (γ + δ')$.
+
+In general, for scoped entities we provide the following definition to
+construct types that describe openings.
 
 \begin{code}%
 \>[0]\AgdaFunction{Openable}\AgdaSpace{}%
@@ -60,10 +73,6 @@ some entity scoped in $γ + δ$.
 \end{code}
 
 As with previous concepts, we adopt a naming convension when constructing
-openings where we use ⊗ often suffexed with the kind of thing we are opening.
+openings where we use ⊗ often suffexed to identify the kind of thing we
+are opening.
 
-\hl{DOUBLE CHECK THIS}
-
-It is possible to express an opening as a thinning $δ ⊑ (γ + δ)$ however
-having a type that can express an opening in terms of $γ$ rather than
-in terms of a thinning is often more convenient and readable.
