--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -542,6 +542,8 @@
 \>[28]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{nothing}\<%
 \\
+\>[0]\AgdaComment{-- TO DO, THUNK MATCHING!! evaluate it to head normal form}\<%
+\\
 \>[0]\AgdaCatchallClause{\AgdaFunction{match}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
@@ -814,188 +816,21 @@
 \AgdaFunction{Openable}\AgdaSpace{}%
 \AgdaDatatype{Var}\<%
 \\
-\>[0]\AgdaInductiveConstructor{zero}%
-\>[6]\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{v}\<%
-\\
-\>[0]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\<%
+\\
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaInductiveConstructor{su}\AgdaSpace{}%
 \AgdaBound{v}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{su}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
 \AgdaBound{v}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{private}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{variable}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dir}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can 'open up' a term using the thinning}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Openable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[29]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[29]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[29]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[29]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[29]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}%
-\>[29]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- and we can open environments}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗env\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{-Env}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{-Env}}\<%
-\\
-\>[0]\AgdaInductiveConstructor{`}%
-\>[8]\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{`}\<%
-\\
-\>[0]\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{e}%
-\>[8]\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaInductiveConstructor{thing}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗env}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thing}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗term}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
